deployment/dex/04-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dex
  namespace: dex
spec:
  selector:
    app: dex
  ports:
  - port: 5556
    targetPort: https
    name: https
