deployment/dex/04-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dex.${DNS_NAME}
    secretName: dex-tls
  rules:
  - host: dex.${DNS_NAME}
    http:
      paths:
      - backend:
          serviceName: dex
          servicePort: https
